# gff_diff

./: Cargo.toml  README.md
src/: gff_diff.rs  lib.rs  main.rs
test/added_exon/: cap.gff  expected.json
test/alter_exon/: cap.gff  core.gff  expected.json
test/gene_in_intron/: cap.gff  core.gff  expected.json
test/gene_merge/: cap.gff  core.gff  expected.json
test/gene_split/: cap.gff  expected.json
test/gene_validation_3exons_ok/: cap.gff
test/gene_validation_no_start/: cap.gff  expected.json
test/gene_validation_no_stop/: cap.gff  expected.json
test/gene_validation_ok/: core.gff
test/iso_form/: expected.json
test/iso_form_lost/: core.gff  expected.json
test/new_gene/: expected.json
test/no_change/: core.gff  expected.json
test/no_change_isoforms/: core.gff  expected.json
test/remove_exon/: cap.gff  expected.json
test/utr_change/: cap.gff  core.gff  expected.json
