[package]
name = "gff_diff"
version = "0.1.0"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2018"
description = "A tool to generate a diff (in JSON format) between two GFF3 files."
license = "MIT OR Apache-2.0"
repository = "https://github.com/magnusmanske/gff_diff"
keywords = ["gff", "diff"]
categories = ["Command line utilities","Science"]

[dependencies]
bio = "*"
serde_json = "*"
multimap = "*"
getopts = "*"
regex = "*"
rayon = "*"
ignore-result = "*"
libflate = "*"
lazy_static = "*"

[profile.dev]
opt-level = 3