[package]
name = "gff_diff"
version = "0.1.0"
authors = ["Magnus Manske <magnusmanske@googlemail.com>"]
edition = "2018"
description = "A tool to generate a diff (in JSON format) between two GFF3 files."
license = "MIT OR Apache-2.0"
repository = "https://github.com/magnusmanske/gff_diff"
keywords = ["gff", "diff"]
categories = ["command-line-utilities","science"]

[dependencies]
bio = "0.32"
serde_json = "1"
multimap = "0.8"
getopts = "0.2"
regex = "1"
rayon = "1"
ignore-result = "0.2"
libflate = "1"
lazy_static = "1"

[profile.dev]
opt-level = 3